# uupt-mcp-server

./: .python-version  LICENSE  README.md  pyproject.toml
src/uupt-mcp-server/: __main__.py
src/uupt_mcp_server/: __init__.py  order.py
