[project]
name = "uupt-mcp-server"
version = "0.2.1"
description = "uupt.com openapi mcp server"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3"
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
uupt-mcp-server = "uupt_mcp_server:main"