[project]
name = "uupt-mcp-server"
version = "0.2.7"
description = "uupt.com openapi mcp server"
readme = "README.md"
authors = [
    { name = "uupt"}
]
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "dashscope>=1.23.5",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[project.scripts]
uupt-mcp-server = "uupt_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
